--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
       America
     </title>
   </head>
+  <body bgcolor-lightblue>
+    <h1 allign=center>America
+    </h1>
+    <p align=center><img 
   <body>
     <h1>America
     </h1>
