--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body bgcolor-lightblue>
     <h1 allign=center>America
     </h1>
-    <p align=center><img 
+    <p align=center><img usa.jfif>
   <body>
     <h1>America
     </h1>
